--- a/agree/res/layout/item_published_grida.xml
+++ b/agree/res/layout/item_published_grida.xml
@@ -11,6 +11,7 @@
         android:layout_height="80dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true"
         android:scaleType="centerCrop"
         android:src="@drawable/ic_launcher" >
     </ImageView>
