--- a/agree/res/layout/slidingmenu_member_item.xml
+++ b/agree/res/layout/slidingmenu_member_item.xml
@@ -29,7 +29,7 @@
 
         <TextView
             android:id="@+id/Member_name"
-            android:layout_width="wrap_content"
+            android:layout_width="200.0dp"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:layout_marginLeft="10.0dp"
@@ -42,10 +42,9 @@
 
         <TextView
             android:id="@+id/Member_role"
-            android:layout_width="wrap_content"
+            android:layout_width="200.0dp"
             android:layout_height="wrap_content"
             android:layout_alignLeft="@+id/Member_name"
-            android:layout_alignRight="@+id/Member_name"
             android:layout_below="@+id/Member_name"
             android:gravity="left|center"
             android:text="TextView"
