--- a/agree/res/layout/activity_gallery.xml
+++ b/agree/res/layout/activity_gallery.xml
@@ -2,15 +2,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MyGalleryActivity" 
-    android:background="#000"
-    >
+    tools:context=".PhotoViewActivity"
+    android:background="#ffffff" >
 
-    
-        <uk.co.senab.photoview.PhotoView
-        android:id="@+id/image"
+    <com.biju.HackyViewPager
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/view_pager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scaleType="fitCenter" />
+        android:layout_alignParentLeft="true"
+         >
+    </com.biju.HackyViewPager>
 
 </RelativeLayout>
