--- a/agree/res/layout/chat_item_base_right2.xml
+++ b/agree/res/layout/chat_item_base_right2.xml
@@ -109,12 +109,12 @@
             android:id="@+id/tv_sendtime"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
             android:layout_marginRight="5dp"
             android:layout_toLeftOf="@+id/tv_chatcontent"
             android:text="15:32"
             android:textColor="#8e8e8e"
             android:textSize="12sp"
+            android:layout_marginTop="20dp"
             />
 
         <TextView
