--- a/agree/res/layout/fragment_friends.xml
+++ b/agree/res/layout/fragment_friends.xml
@@ -26,7 +26,7 @@
 
         <RelativeLayout
             android:id="@+id/tab_friends_addbuddy_layout"
-            android:layout_width="@dimen/title_right_width"
+            android:layout_width="80.0dp"
             android:layout_height="match_parent"
             android:layout_alignParentRight="true"
             android:layout_alignParentTop="true" >
